fix firefox layout issue in the login seesion page and textarea width issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -177,7 +177,7 @@ label {
 
 textarea {
 	height:auto;
-	width:auto;
+	width:587px; /*temporty fix in firefox, by giving a fixed value for the width*/
 }
 
 /* Record header */
@@ -371,7 +371,7 @@ thead th a:hover,
 	margin-right:auto;
 	border:3px solid #aaa;
 	width:300px;
-	height:300px;
+	height:auto;
 	background-color:#fff;
 }
 
